@@ -1,4 +1,19 @@
-# (c) 2003 Nuxeo SARL <http://nuxeo.com>
+# Copyright (c) 2003 Nuxeo SARL <http://nuxeo.com>
+#
+# This program is free software; you can redistribute it and/or modify
+# it under the terms of the GNU General Public License version 2 as published
+# by the Free Software Foundation.
+#
+# This program is distributed in the hope that it will be useful,
+# but WITHOUT ANY WARRANTY; without even the implied warranty of
+# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
+# GNU General Public License for more details.
+#
+# You should have received a copy of the GNU General Public License
+# along with this program; if not, write to the Free Software
+# Foundation, Inc., 59 Temple Place - Suite 330, Boston, MA
+# 02111-1307, USA.
+#
 # $Id$
 """
   TextBox
@@ -45,7 +60,7 @@ class TextBox(BaseBox):
 
     _properties = BaseBox._properties + (
         {'id':'text', 'type':'text', 'mode':'w', 'label':'Text'},
-        )
+    )
 
     def __init__(self, id, text='', **kw):
         BaseBox.__init__(self, id, category='textbox', kw=kw)
